# pytest-pipesnap

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: main.yml
docs/: index.md
pytester_example_dir/: scenarios.yaml  test_pipeline_output.py  test_pipeline_output_then_pipeline_input.py  test_pipeline_output_with_assertions.py  test_simple_testcases.py  test_simple_testcases_with_scenarios.py  test_simple_testcases_with_scenarios_named_file.py  test_testcases_with_mock.py
src/pytest_pipesnap/: pipesnap.py  plugin.py
tests/: pipesnap_test.py  plugin_test.py  test_plugin.py
