[tool.poetry]
name = "pytest-pipesnap"
version = "0.1.0"
description = "Testing lib"
authors = ["Martin Møldrup <mmoeldrup@grundfos.com>"]
readme = "README.md"
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "pytest_pipesnap", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.1.1"
pyyaml = "^6.0.1"
ruff = "^0.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
"pipesnap" = "pytest_pipesnap.plugin"